@@ -174,7 +174,7 @@
       <autocompile>true</autocompile>
       <autoinstall>false</autoinstall>
       <autokdesu>false</autokdesu>
-      <globaldebugarguments>/data/development/sources/kde-3.5/kdewebdev/kommander/examples/old/form1.kmdr</globaldebugarguments>
+      <globaldebugarguments>/data/development/quanta/test-dcop.kmdr</globaldebugarguments>
       <globalcwd>/data/development/build/kde-3.5/kdewebdev/</globalcwd>
       <useglobalprogram>true</useglobalprogram>
     </run>
